# money_stuff

./: .env_template  LICENSE  Makefile  README.md  gemini.md  ideas.md  main.py  ner.md  pyproject.toml
data/: article_1_AI_rollup.md
data/prompts/: prompts.md  question_generation__system_prompt.md  text_chunking__system_prompt.md  text_chunking__user_prompt.md
money_stuff/: __init__.py  app.py  data_model.py  db_stats.py  download_article.py  ingest.py  ner.py  newsletter_parser.py  populate_db.py  read_emails.py  sanity_check_ner.py  web_app.py
money_stuff/db/: __init__.py  db.py  db_stats.py  populate_db.py
money_stuff/email_processing/: __init__.py  newsletter_parser.py  read_emails.py
money_stuff/text_chunking/: __init__.py  text_chunking.py
money_stuff/utils/: string_utils.py
notebooks/: 00_test.ipynb  01_ner.ipynb  02_text_chunking.ipynb
scripts/: connect_to_db.sh  setup.sh
sql/: data_model.sql  ner.sql  rag.sql
